[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqc_bluesky"
dist-name = "yaqc-bluesky"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://github.com/bluesky/yaqc-bluesky"
description-file = "README.md"
requires-python = ">3.7"
requires = ["yaqc>=2020.7.3", 
            "bluesky>=1.6.6", 
            "happi>=1.8.4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
dev = ["black",
       "pre-commit",
       "pytest",
       "yaqd_core",
       "yaqd_fakes",
       "mypy"]

[tool.flit.entrypoints."happi.containers"]
yaq = "yaqc_bluesky._happi"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
