[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqc_bluesky"
dist-name = "yaqc-bluesky"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://github.com/bluesky/yaqc-bluesky"
description-file = "README.md"
requires-python = ">3.7"
requires = ["yaqc>=2021.10.0",
            "bluesky>=1.6.6",
            "happi>=2.0.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.requires-extra]
dev = ["black",
       "pre-commit",
       "pytest",
       "yaqd_core",
       "yaqd_fakes>=2022.3.0",
       "mypy",
       "databroker<2"]

[tool.flit.entrypoints."happi.containers"]
yaq = "yaqc_bluesky._happi"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
